style.css
body { 
  padding: 0;
  margin: 0;
  font-family: "Nunito", sans-serif;

}

a {
  text-decoration: none;
}

.navbar-container-home {
  position: fixed;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: rgba(23,24,24,.8);
  top: 1rem;
  left: 50%; /* Move the element to the center */
  width: 17rem;
  border-radius: 50px;
  transform: translateX(-50%); /* Adjust the element's position to truly center it */
  animation-name: navbar-container-home;
  animation-duration: 2s;
  z-index: 100;
}

.navbar-container-pages {
  position: fixed;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: rgba(23,24,24,.8);
  top: 1rem;
  left: 50%; /* Move the element to the center */
  width: 17rem;
  border-radius: 50px;
  transform: translateX(-50%); /* Adjust the element's position to truly center it */
  animation-name: navbar-container-pages;
  animation-duration: 2s;
  z-index: 100;
}

.navbar-title-home {
  text-align: center;
  color: white;
  background-color: black;
  overflow: hidden;
  border-radius: 50px;
  animation-name: navbar-title-home;
  animation-duration: 2s;
  visibility: hidden;
  white-space: nowrap;
}

.navbar-title-pages {
  text-align: center;
  color: white;
  background-color: black;
  overflow: hidden;
  border-radius: 50px;
  animation-name: navbar-title-pages;
  animation-duration: 2s;
  visibility: hidden;
  white-space: nowrap;
}

@keyframes navbar-title-home {
  17%, 68% {
    margin: .56rem 0;
    padding: 1.04rem 1.5rem;
    visibility: hidden;
    opacity: 0;
  }
  50% {
    margin: .56rem 0;
    padding: 1.04rem 3rem;
    visibility: visible;
    opacity: 1;
  }
}

@keyframes navbar-title-pages {
  20%, 68% {
    margin: .56rem 0;
    padding: 1.04rem 1.5rem;
    visibility: hidden;
    opacity: 0;
  }
  50% {
    margin: .56rem 0;
    padding: 1.04rem 3rem;
    visibility: visible;
    opacity: 1;
  }
}

@keyframes navbar-container-home {
  0%, 100% {
    width: 17rem;
  }
  50% {
    width: 27rem;
  }
}

@keyframes navbar-container-pages {
  0%, 100% {
    width: 17rem;
  }
  50% {
    width: 30rem;
  }
}

ul {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
  justify-content: space-between;
  width: 100%;
}

li {
  float: left;
}

h1 {
  color: white;
  margin: 1rem 0;
  /* font-weight better from 600-700 for text that want to emphasize */
  font-weight: 600;
}

h2 {
  color: white;
  opacity: 70%;
  /* font-weight better from 400-500 for normal text */
  font-weight: 400; 
  margin: 1rem 0;
}

.icon {
  margin: 1rem 0;
}

.icon-pages {
  margin: 1rem 0;
  animation-name: icon-pages;
  animation-duration: 2s;
}

@keyframes icon-pages {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 0 20px;
  text-decoration: none;
  border-radius: 50px;
  cursor: pointer;
  margin: .5rem;
}

li a:hover:not(.active) {
  background-color: #111;
}

.active {
  background-color: black;
}

.card-container {
  display: flex;
  flex-flow: row wrap;
  gap: 2rem;
  margin-right: 5rem;
}

@media (max-width: 800px) {
  .card-container {
    flex-direction: column;
  }
}

.card {
  position: relative;
  overflow: hidden;
  display: flex;
  width: 20rem;
  height: 20rem;
  border-color: grey;
  border-radius: 10px;
  box-shadow: 2px 4px 8px 0 rgba(0,0,0,0.2);
  cursor: pointer;
  transition-duration: 300ms;
}

.card:hover {
  transform: scale(1.05);
  transition-duration: 300ms;
}

.card-title-container {
  padding: 0.5rem;
  align-self: flex-end;
  width: 100%;
  height: auto;
  background-color: rgba(0,0,0,.50);
  background: linear-gradient(to bottom, transparent 0%, #1e2124 100%);
}

.card-title {
  color: rgba(255,255,255,.90);
  font-size: 2rem;
  line-height: 1;
  font-weight: 600;
}

.flex-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

@media (max-width: 800px) {
  .flex-container {
    flex-direction: column;
  }
}

.warning-container {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  background-color: rgba(255,97,97,.1);
  color: rgba(255,97,97);
  border-radius: 10px;
  padding: 0 1rem;
  width: 19rem;
}

/* homepage div */
.homepage {
  padding-top: 35vh;
  min-height: 65vh;
  text-align:left;
  padding-left: 5rem;
  vertical-align: middle;
  background-color: #282b30;
}

/* anime recommendation div */
.anime-recommendation {
  margin-top: 0;
  min-height: 80vh;
  text-align:left;
}

.anime-recommendation-content {
  padding-top: 35vh;
  padding-left: 5rem;
  height: 80vh;
  background: 
    linear-gradient(to bottom, transparent 0%, transparent 50%, #1e2124 100%),
    linear-gradient(to left, transparent 0%, transparent 35%, #1e2124 100%);
}

footer {
  height: 9vh;
  text-align: center;
  background-color: #1e2124;
}

.footer-content {
  vertical-align: middle;
  padding-top: 2rem;
  color: white;
  font-size: small;
  /* font-weight better from 400-500 for normal text */
  font-weight: 400; 
  opacity: 80%;
}

.has-bg-img{
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

.anime-recommendation-img {
  background-image: url("/images/rin.png");
}

.fun-things-img {
  background-image: url("/images/cloud-minichocobo.png");
}

.project-list-img {
  background-image: url("/images/github-repo.png");
}

/* PARALLAX STUFF */
.wrapper {
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  perspective: 10px;
}

.header {
  position: relative;
  display: flex;
  justify-content: left;
  align-items: center;
  padding-left: 5rem;
  height: 100%;
  transform-style: preserve-3d;
  z-index: -1;
  background: 
    linear-gradient(to bottom, transparent 0%, transparent 50%, #1e2124 100%),
    linear-gradient(to left, transparent 0%, transparent 35%, #1e2124 100%);

}

.background {
  transform: translateZ(-10px) scale(2);

}

.background {
  position: absolute;
  height: 100%;
  width: 100%;
  object-fit: cover;
  z-index: -100;
}

.title {
  font-size: 7rem;
  color: black;
}

.section {
  font-size: 2rem;
  padding: 2rem;
  background-color: #333;
  color: white;
}

